<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="top">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            android:scaleType="center"
            android:contentDescription="@string/item_description_image"
            android:background="@drawable/rounded_bg" />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/product_category"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/product_description"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="Pay"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary" />

    </LinearLayout>
</ScrollView>